VoltScript v0.8.6: Major Performance & Stability Release
Key Enhancements:
- Introduced high-performance Stack-based Bytecode VM (2.5x speedup for loops).
- Implemented AST-to-Bytecode Compiler for optimized execution.
- Added Thread-safe String Interning via StringPool (O(1) comparisons, reduced memory).
- Integrated Environment Lookup Caching for faster variable access.
- Expanded test coverage to 585+ passing tests including extensive VM unit tests.
- Optimized CMake build system with unified performance benchmarks.
- Updated documentation (README, Migration Guide, Release Notes) for v0.8.6 features.

--- a/docs/v0.8.6_RELEASE_NOTES.md
+++ b/docs/v0.8.6_RELEASE_NOTES.md
@@ -1,44 +1,43 @@
 # VoltScript v0.8.6 Release Notes
 
-**Release Date:** February 12, 2026
+VoltScript v0.8.6 is a major performance and stability release, introducing a new bytecode virtual machine, string interning, and significant optimizations across the entire system.
 
-## 🚀 Overview
+## 🚀 Key Performance Enhancements
 
-VoltScript v0.8.6 is a major performance and feature update that completes the class system, introduces significant architectural optimizations, and refactors core components for better modularity and speed.
+### 1. Stack-based Bytecode VM
+A new high-performance bytecode VM has been introduced alongside the traditional tree-walk interpreter. 
+- **Up to 2.5x performance increase** for CPU-bound tasks like loops and recursive calculations.
+- Optimized opcode set for common operations.
+- Faster variable access and stack management.
 
-## ✨ Key Features
+### 2. Thread-safe String Interning
+All strings and identifiers are now interned in a global, thread-safe `StringPool`.
+- **O(1) String Comparison**: Comparing interned strings is now a simple pointer comparison.
+- **Reduced Memory Footprint**: Duplicate strings share the same memory location.
+- Automatic interning for all tokens and literals.
 
-### 🏗️ Complete Class System
-The object-oriented programming model is now fully implemented and verified.
-- **Inheritance**: Classes can now extend other classes using the `extends` keyword.
-- **Methods**: Instance methods with full access to `this`.
-- **Super Calls**: Access parent class methods using `super`.
-- **Constructors**: Automatic call to `init` method during instantiation.
-- **Property Access**: Robust handling of instance properties.
+### 3. Environment Lookup Caching
+Variable lookups in deeply nested scopes or recursive functions are now optimized via a lookup cache in the `Environment` class.
 
-### ⚙️ Performance Optimizations
-Significant work has been done to make VoltScript faster and more efficient.
-- **Environment Lookup Caching**: Deeply nested variable lookups are now cached, providing up to 5x speedup in complex recursive scenarios.
-- **Binary Exponentiation**: The `pow()` function now uses the $O(\log n)$ binary exponentiation algorithm for integer exponents.
-- **Compiler Optimizations**: The build system now defaults to `-O3` (GCC/Clang) and `/O2` (MSVC) with Link-Time Optimization (LTO) enabled for release builds.
+## 🛠️ New Features
 
-### 📦 Centralized JSON Engine
-The JSON implementation has been refactored into a dedicated, modular engine.
-- **Modular Design**: JSON logic is now contained within `JSONParser` and `JSONEncoder` classes.
-- **Improved Robustness**: Better handling of nested structures, arrays, and hash maps.
-- **Performance**: Optimized string construction and parsing logic.
+- **AST-to-Bytecode Compiler**: A new compiler that transforms the Abstract Syntax Tree into optimized bytecode chunks.
+- **Enhanced CMake Integration**: Updated build system with better support for benchmarks and performance testing.
+- **Comprehensive Benchmarking Suite**: New benchmark tools to measure and track performance gains across releases.
 
-## 🧪 Testing & Quality
-- **Expanded Test Suite**: Over 700+ tests covering all aspects of the language.
-- **New Performance Benchmarks**: Dedicated benchmarks for math operations and variable lookups.
-- **Bug Fixes**: Resolved issues with class instantiation and duplicate method definitions.
+## 🐞 Bug Fixes & Stability
 
-## 🛠️ Build Changes
-- **CMake Version Bump**: Project version updated to 0.8.6.
-- **New Test Files**: Added `test_json.cpp` and `test_performance.cpp` to the test suite.
-- **Optimization Flags**: Added aggressive optimization flags for production builds.
+- Resolved issues with undefined global variable handling in the VM.
+- Fixed `GroupingExpr` member access in the compiler.
+- Improved error reporting for bytecode execution.
+- Consolidated test sources for faster build times.
 
-## 📝 Migration Guide
-VoltScript v0.8.6 is fully backward compatible with scripts written for v0.8.0+.
-- No breaking changes to existing syntax or built-in functions.
-- Improved performance for existing scripts without modification.
+## 📈 Test Coverage
+
+- Added **extenisve VM unit tests** covering arithmetic, control flow, and scoping.
+- **585 passing tests** across all suites (Lexer, Parser, Interpreter, VM).
+- New integration tests for v0.8.6 features.
+
+## 🔗 Migration
+
+v0.8.6 is fully backward compatible. For more details, see the [Migration Guide](MIGRATION_GUIDE.md).
